/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.gomeplus.grpc.protobuf;


option java_multiple_files = false;


//--------------------- 查询用户 Demo --------------------------------



//------------------------ end -----------------------------

//注：公共参数
//	一、请求参数：
//	1.traceId(long)-日志跟踪和调用者缓存使用
//	2.extra(string)-扩展信息(可以为空)
//	3.appId(string)-区分不同应用 （redis操作不需要）
//	二、返回参数：
//	1.traceId(long)-日志跟踪和调用者缓存使用
//	2.extra(string)-扩展信息(可能为空)
//	3.success(bool)-调用是否成功
//批量拉取群成员的群信息
message ReqBatchGroupIdInfo{
	string groupId=1;
	int64 lastPullTimestamp=2;//上一次拉取群成员的时间戳
	int32 status=3; // 0-查询新加入和离开的群成员，1-新加入的成员，2-删除的新成员 默认为 0 
	int64 userId=4;//用户ID
	repeated int64 userIds=5;//用户ID集合
	int32 page=6;//分页页数
	int32 pageSize=7;//分页大小
}
